content/_generated-doc/3.2/config/quarkus-kafka-streams-config-group-sasl-config.adoc

:summaryTableId: quarkus-kafka-streams-config-group-sasl-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kafka-streams-config-group-sasl-config_configuration]]link:#quarkus-kafka-streams-config-group-sasl-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-mechanism]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-mechanism[quarkus.kafka-streams.sasl.mechanism]`


[.description]
--
SASL mechanism used for client connections

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-jaas-config]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-jaas-config[quarkus.kafka-streams.sasl.jaas-config]`


[.description]
--
JAAS login context parameters for SASL connections in the format used by JAAS configuration files

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_JAAS_CONFIG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_JAAS_CONFIG+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-client-callback-handler-class]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-client-callback-handler-class[quarkus.kafka-streams.sasl.client-callback-handler-class]`


[.description]
--
The fully qualified name of a SASL client callback handler class

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_CLIENT_CALLBACK_HANDLER_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_CLIENT_CALLBACK_HANDLER_CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-callback-handler-class]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-callback-handler-class[quarkus.kafka-streams.sasl.login-callback-handler-class]`


[.description]
--
The fully qualified name of a SASL login callback handler class

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_CALLBACK_HANDLER_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_CALLBACK_HANDLER_CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-class]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-class[quarkus.kafka-streams.sasl.login-class]`


[.description]
--
The fully qualified name of a class that implements the Login interface

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-kerberos-service-name]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-kerberos-service-name[quarkus.kafka-streams.sasl.kerberos-service-name]`


[.description]
--
The Kerberos principal name that Kafka runs as

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-kerberos-kinit-cmd]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-kerberos-kinit-cmd[quarkus.kafka-streams.sasl.kerberos-kinit-cmd]`


[.description]
--
Kerberos kinit command path

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_KINIT_CMD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_KINIT_CMD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-kerberos-ticket-renew-window-factor]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-kerberos-ticket-renew-window-factor[quarkus.kafka-streams.sasl.kerberos-ticket-renew-window-factor]`


[.description]
--
Login thread will sleep until the specified window factor of time from last refresh

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_TICKET_RENEW_WINDOW_FACTOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_TICKET_RENEW_WINDOW_FACTOR+++`
endif::add-copy-button-to-env-var[]
--|double 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-kerberos-ticket-renew-jitter]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-kerberos-ticket-renew-jitter[quarkus.kafka-streams.sasl.kerberos-ticket-renew-jitter]`


[.description]
--
Percentage of random jitter added to the renewal time

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_TICKET_RENEW_JITTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_TICKET_RENEW_JITTER+++`
endif::add-copy-button-to-env-var[]
--|double 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-kerberos-min-time-before-relogin]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-kerberos-min-time-before-relogin[quarkus.kafka-streams.sasl.kerberos-min-time-before-relogin]`


[.description]
--
Percentage of random jitter added to the renewal time

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_MIN_TIME_BEFORE_RELOGIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_MIN_TIME_BEFORE_RELOGIN+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-refresh-window-factor]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-refresh-window-factor[quarkus.kafka-streams.sasl.login-refresh-window-factor]`


[.description]
--
Login refresh thread will sleep until the specified window factor relative to the credential's lifetime has been reached-

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_WINDOW_FACTOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_WINDOW_FACTOR+++`
endif::add-copy-button-to-env-var[]
--|double 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-refresh-window-jitter]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-refresh-window-jitter[quarkus.kafka-streams.sasl.login-refresh-window-jitter]`


[.description]
--
The maximum amount of random jitter relative to the credential's lifetime

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_WINDOW_JITTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_WINDOW_JITTER+++`
endif::add-copy-button-to-env-var[]
--|double 
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-refresh-min-period]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-refresh-min-period[quarkus.kafka-streams.sasl.login-refresh-min-period]`


[.description]
--
The desired minimum duration for the login refresh thread to wait before refreshing a credential

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_MIN_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_MIN_PERIOD+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|


a| [[quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-refresh-buffer]]`link:#quarkus-kafka-streams-config-group-sasl-config_quarkus-kafka-streams-sasl-login-refresh-buffer[quarkus.kafka-streams.sasl.login-refresh-buffer]`


[.description]
--
The amount of buffer duration before credential expiration to maintain when refreshing a credential

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_BUFFER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_BUFFER+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
